# timer_gui_cpp-qt

./: CMakeLists.txt  Main.cpp  README.md  Timer.cpp  Timer.h  Timer.ui  TimerLogic.cpp  TimerLogic.h  TimerView.cpp  TimerView.h  TimerView.ui  UnitTesting.cpp  UnitTesting.h  main.cpp
